--- a/package.json
+++ b/package.json
@@ -47,31 +47,31 @@
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
-    "lucide-react": "^0.454.0",
-    "next": "^15.5.5",
+    "lucide-react": "^0.463.0",
+    "next": "^15.1.7",
     "next-themes": "^0.4.6",
     "path": "latest",
-    "react": "^18",
-    "react-day-picker": "9.8.0",
-    "react-dom": "^18",
-    "react-hook-form": "^7.60.0",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.4",
-    "sonner": "^1.7.4",
-    "tailwind-merge": "^2.5.5",
+    "react": "^18.3.1",
+    "react-day-picker": "^9.13.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.63.0",
+    "react-resizable-panels": "^4.0.8",
+    "recharts": "^3.6.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "url": "latest",
-    "vaul": "^0.9.9",
-    "zod": "3.25.76"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.9",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/node": "^22.13.0",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^4.1.10",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
